# bdpan

./: .gitignore  Dockerfile  LICENSE  README.md  auth_manager.py  config.json.example  config.py  cookie.txt.example  docker-compose.dev.yml  docker-compose.yml  main.py  main_1.py  manage.py  pyproject.toml  quick-start.sh  requirements.txt  start.sh
chrome-extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
docs/: 2025-08-24_auth_manager修复记录.md  2025-08-24_界面简化和功能修复.md  2025-08-24_项目开源发布记录.md  2025-08-24内容.md  2025-08-30_数据持久化配置.md  require.md
static/css/: style.css
static/js/: app.js  baidu-auth.js  config.js  cookie-manager-fixed.js  cookie-manager.js
templates/: base.html  config.html  history.html  search.html  status.html  top100.html
