[project]
name = "bdpan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhangqingyue", email = "cfrs2005@gmail.com"},
]
dependencies = ["requests>=2.32.4", "tmdbv3api>=1.9.0", "BaiduPCS-Py>=0.7.4", "cython>=0.29.37", "flask>=3.0.3"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
